# Create_auto_project

./: .gitignore  DEBUGGING_GUIDE.md  Dockerfile  README.md  app.py  debug_agent.py  debug_config.py  debug_utils.py  pyproject.toml  requirements.txt  test_debug.py
agent/: graph.py  prompts.py  tools.py
generated_project1/: README.md  app.js  index.html  style.css  styles.css
generated_site1/: README.md  index.html  script.js  style.css
